<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="pe.edu.crisol.libreria.ui.home.HomeFragment"
        android:label="@string/label_home_menu"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_detailsFragment"
            app:destination="@id/bookDetailFragment"/>
    </fragment>
    <fragment
        android:id="@+id/searchFragment"
        android:name="pe.edu.crisol.libreria.ui.search.SearchFragment"
        android:label="@string/label_search_menu"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_detailsFragment"
            app:destination="@id/bookDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/bookDetailFragment"
        android:name="pe.edu.crisol.libreria.ui.detail.BookDetailFragment"
        android:label="@string/label_book_detail_menu"
        tools:layout="@layout/fragment_book_detail">
        <argument
            android:name="book_id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="pe.edu.crisol.libreria.ui.profile.ProfileFragment"
        android:label="@string/label_profile_menu"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/moreFragment"
        android:name="pe.edu.crisol.libreria.ui.more.MoreFragment"
        android:label="@string/label_more_menu"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/shoppingCartFragment"
        android:name="pe.edu.crisol.libreria.ui.checkout.cart.CartFragment"
        android:label="@string/label_cart_menu"
        tools:layout="@layout/fragment_cart" />
</navigation>