<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".login.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_gradient"
        android:alpha="0.8">
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/igLogo"
            android:layout_width="319dp"
            android:layout_height="279dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo_description" />

        <EditText
            android:id="@+id/htEmail"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/ht_login_radius"
            android:ems="10"
            android:hint="@string/ht_email"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/my_pale_gray"

            android:textSize="12sp" />

        <EditText
            android:id="@+id/htPassword"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/ht_login_radius"
            android:drawableEnd="@drawable/ic_login_password"
            android:ems="10"
            android:hint="@string/ht_password"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/my_pale_gray"

            android:textSize="12sp" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bt_login_radius"
            android:text="@string/bt_login"
            android:textAllCaps="false"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="180dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_account_message"
                android:textColor="@color/my_snow_white">

            </TextView>

            <Button
                android:id="@+id/btRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/my_transparent"
                android:padding="5dp"

                android:text="@string/bt_register"
                android:textAllCaps="false"
                android:textColor="@color/my_golden_yellow" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>