<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:titleCentered="true"
            app:titleTextColor="?attr/colorPrimary"
            app:title="Crisol"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".view.fragment.HomeFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_category_1"
                android:layout_marginHorizontal="16dp"
                android:textAppearance="?attr/textAppearanceTitleMedium"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carousel1"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_book_carousel" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_category_2"
                android:layout_marginHorizontal="16dp"
                android:textAppearance="?attr/textAppearanceTitleMedium"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carousel2"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_book_carousel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_category_3"
                android:layout_marginHorizontal="16dp"
                android:textAppearance="?attr/textAppearanceTitleMedium"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carousel3"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:layout_marginVertical="16dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_book_carousel" />

            <TextView
                android:text="@string/book_category_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textAppearance="?attr/textAppearanceTitleMedium"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/carousel4"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:layout_marginVertical="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_book_carousel" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
